WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153680
Tab suspension code shouldn't use page cache cacheability logic
https://bugs.webkit.org/show_bug.cgi?id=153680
Summary
Tab suspension code shouldn't use page cache cacheability logic
Antti Koivisto
Reported
2016-01-29 15:45:44 PST
Most of the checks are unnecessary
Attachments
patch
(5.14 KB, patch)
2016-01-29 15:58 PST
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-01-29 15:58:51 PST
Created
attachment 270269
[details]
patch
Antti Koivisto
Comment 2
2016-01-29 17:32:30 PST
http://trac.webkit.org/changeset/195871
Chris Dumez
Comment 3
2016-01-30 13:36:35 PST
It looks like this patch may have caused 4 tests to fail:
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r195871%20(2937)/results.html
Chris Dumez
Comment 4
2016-01-30 13:39:09 PST
Reverted
r195871
for reason: Caused several layout tests to time out Committed
r195909
: <
http://trac.webkit.org/changeset/195909
>
Antti Koivisto
Comment 5
2016-02-02 11:47:08 PST
Relanded in
http://trac.webkit.org/changeset/196023
with 1 minute timer to avoid suspending tests that explicitly set page to non-visible state.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug